# minerva

./: Dockerfile  README.md  docker-compose.yml  pyinstaller.py  pyproject.toml  setup.iss
.github/workflows/: docker.yml
minerva/: auth.py  cache.py  cli.py  console.py  constants.py  doctor.py  downloader.py  jobs.py  loop.py  speed.py  worker_thread.py  ws_message.py
minerva/downloaders/: __init__.py  aria2c.py  httpx.py
