[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minerva-worker"
version = "2.0.0"
description = "Minerva DPN Worker, for more information see https://minerva-archive.org"
authors = [{ email = "minervaarchive@proton.me" }]
maintainers = [{ email = "17136956+rlaphoenix@users.noreply.github.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "CC0-1.0"
license-files = ["LICENSE"]
keywords = ["archival", "data", "tui", "myrient", "minerva"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Topic :: Games/Entertainment",
    "Topic :: Utilities",
]
dependencies = [
    "click~=8.3.1",
    "rich~=14.3.3",
    "httpx~=0.28.1",
    "humanize~=4.15.0",
    "humanfriendly~=10.0",
    "readchar>=4.2.1",
    "websockets>=16.0",
    "keyring>=25.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["minerva"]

[project.urls]
Website = "https://minerva-archive.org"
Repository = "https://github.com/minerva-archive/worker"
Issues = "https://github.com/minerva-archive/worker/issues"
Discussions = "https://github.com/minerva-archive/worker/discussions"
Changelog = "https://github.com/minerva-archive/worker/blob/master/CHANGELOG.md"

[dependency-groups]
pack = ["pyinstaller~=6.18.0"]
lint = ["ruff~=0.14.13", "pre-commit~=4.3.0"]
form = ["ruff~=0.14.13", "isort~=6.1.0"]

[project.scripts]
minerva = "minerva.cli:main"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "W", "I"]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
follow_imports = "silent"
ignore_missing_imports = true
no_implicit_optional = true
